<resources>
    <string name="app_name">GEOInfo</string>
    <string name="dialog_message">Message</string>
    <string name="dialog_title">Titulo</string>
    <string name="coordenadas">Formato de Apresentação das Coordenadas Geográficas:</string>
    <string name="velocidade">Unidade de Apresentação da Velocidade</string>
    <string name="orientMapa">Orientação do Mapa</string>
    <string name="tipoMapa">Tipo do Mapa</string>
    <string name="infotrafego">Informações de Tráfego</string>
    <string name="mostrarMapa">Visão de Mapa </string>
    <string name="creditos"> \n Esta aplicação consiste na implementação de um sistema de navegação para
        dispositivos móveis, fornecendo uma interface com o usuário com informações relacionadas as
        coordenadas do dispositivo, posição de satélites visíveis na esfera celeste e qualidade do
        sinal, além de configurações referentes a apresentação destas informações. \n\n
        Elaborada por Isabel Atta e Samuel Carvalho trata-se de uma prática desenvolvida para
        fins de avaliação da disciplina Concepção e Desenvolvimento de Aplicações para Dispositivos
        Móveis do curso de Sistemas de Informação do DCET – I da Universidade do Estado da Bahia – UNEB.
    </string>


    <string name="latitude">Latitude</string>
    <string name="valueLat">Valor da Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="valueLong">Valor da Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="valueAlt">Valor da Altitude</string>

    <string name="legenda">Legenda</string>
        <string name="usedInFix">Disponibilidade do Sinal (usedInFix):</string>
            <string name="disponivel">Disponível</string>
            <string name="indisponivel">Indisponível</string>
        <string name="snr">SNR - signal to noise ratio</string>
            <string name="snrHight">Sinal Forte ( maior que 20 SNR )</string>
            <string name="snrMedium">Sinal Médio ( entre 10 e 20 SNR)</string>
            <string name="snrLow">Sinal Fraco ( menor que 10 SNR )</string>
        <string name="costelacao">Costelação</string>
            <string name="gps">GPS</string>
            <string name="glonass">GLONASS</string>
            <string name="qzss">QZSS (Japão)</string>
            <string name="beidou">BEIDOU</string>
            <string name="galileo">GALILEO</string>

    <string-array name="coordOpt" >
        <item>Grau Decimal</item>
        <item>Grau-Minuto Decimal</item>
        <item>Grau-Minuto-Segundo Decimal</item>
    </string-array>

    <string-array name="velocidadeOpt" >
        <item>Km/h(quilometro por hora)</item>
        <item>Mph (milhas por hora)</item>
    </string-array>

    <string-array name="orientOpt" >
        <item>Nenhuma</item>
        <item>North Up</item>
        <item>Course Up</item>
     </string-array>

    <string-array name="tipoOpt" >
        <item>Vetorial</item>
        <item>Imagem de Satélite</item>
    </string-array>


</resources>
